<resources>
    <string name="app_name">Screenshot Tile</string>
    <string name="tile_label">Screenshot</string>
    <string name="dialog_obtain_root">Failed to get root permission</string>
    <string name="dialog_obtain_root_message">%s requires root permission to send screenshots of the analog keys</string>
    <string name="dialog_reacquire">Reacquire</string>
    <string name="dialog_i_know">I Know</string>
    <string name="dialog_uninstall">Uninstall</string>
    <string name="title_delay">Delay</string>
    <string name="title_work_mode">Working mode</string>
    <string name="title_work_mode_please_select"><font color="red">Please click here to select the working mode.</font></string>
    <string name="dialog_generating_rsa">Generating RSA Key Pair</string>
    <string name="dialog_title_generate_rsa_failed">Key Pair Generation Failed</string>
    <string name="dialog_message_generate_rsa_failed">Unable to generate and save RSA key pair</string>
    <string name="more_setting">More Settings</string>
    <string name="setting_delay_entry_default">Instant</string>
    <string name="setting_delay_entry_1s">1s</string>
    <string name="setting_delay_entry_2s">2s</string>
    <string name="setting_delay_entry_5s">5s</string>
    <string name="show_count_down">Show count down</string>
    <string name="setting_work_mode_value_default" translatable="false">@string/setting_work_mode_value_root</string>
    <string name="setting_work_mode_value_none" translatable="false"/>
    <string name="setting_work_mode_value_root" translatable="false">root</string>
    <string name="setting_work_mode_value_wifi_adb" translatable="false">wifi_adb</string>
    <string name="setting_work_mode_entry_root">Root mode</string>
    <string name="setting_work_mode_entry_wifi_adb">WiFi ADB mode(experimental, port 5555)</string>

    <!-- translatable="false" -->
    <string name="setting_delay_value_default" translatable="false">0</string>
    <string-array name="setting_delay_entries" translatable="false">
        <item>@string/setting_delay_entry_default</item>
        <item>@string/setting_delay_entry_1s</item>
        <item>@string/setting_delay_entry_2s</item>
        <item>@string/setting_delay_entry_5s</item>
    </string-array>
    <string-array name="setting_delay_values" translatable="false">
        <item>@string/setting_delay_value_default</item>
        <item>1</item>
        <item>2</item>
        <item>5</item>
    </string-array>
    <string-array name="setting_work_mode_entries" translatable="false">
        <item>@string/setting_work_mode_entry_root</item>
        <item>@string/setting_work_mode_entry_wifi_adb</item>
    </string-array>
    <string-array name="setting_work_mode_values">
        <item>@string/setting_work_mode_value_root</item>
        <item>@string/setting_work_mode_value_wifi_adb</item>
    </string-array>
    <string name="pref_key_adb_port" translatable="false">adb_port</string>
    <string name="pref_key_work_mode" translatable="false">mode</string>
    <string name="pref_key_delay" translatable="false">delays_string</string>
    <string name="pref_key_show_count_down" translatable="false">show_count_down</string>


</resources>
