<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:entries="@array/setting_work_mode_entries"
        android:entryValues="@array/setting_work_mode_values"
        android:key="@string/pref_key_work_mode"
        android:defaultValue="@string/setting_work_mode_value_default"
        android:title="@string/title_work_mode"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_show_count_down"
        android:title="@string/show_count_down"/>
    <ListPreference
        android:defaultValue="@string/setting_delay_value_default"
        android:entries="@array/setting_delay_entries"
        android:entryValues="@array/setting_delay_values"
        android:key="@string/pref_key_delay"
        android:summary="@string/setting_delay_entry_default"
        android:title="@string/title_delay"/>
</PreferenceScreen>